Добавляет обмен валют
