# internal/dto/wallets.go
@@ -31,3 +31,15 @@ type WithdrawResponse struct {
 type GetRatesResponse struct {
 	Rates pkg.ExchangeRates `json:"rates"`
 }
+
+type ExchangeRequest struct {
+	FromCurrency string  `json:"from_currency"`
+	ToCurrency   string  `json:"to_currency"`
+	Amount       float32 `json:"amount"`
+}
+
+type ExchangeResponse struct {
+	Message         string             `json:"message"`
+	ExchangedAmount float32            `json:"exchanged_amount"`
+	NewBalance      pkg.AccountWallets `json:"new_balance"`
+}
